// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Placeholder matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Placeholder
    classes={
      Object {
        "@keyframes placeholderPulse": "@keyframes placeholderPulse",
        "bottombase": "bottombase",
        "bottomlarge": "bottomlarge",
        "bottommedium": "bottommedium",
        "bottomsmall": "bottomsmall",
        "bottomtiny": "bottomtiny",
        "bottomxLarge": "bottomxLarge",
        "bottomxTiny": "bottomxTiny",
        "heading": "heading",
        "headline": "headline",
        "hero": "hero",
        "large": "large",
        "micro": "micro",
        "placeholder": "placeholder",
        "round": "round",
        "small": "small",
        "standard": "standard",
        "subheading": "subheading",
        "topbase": "topbase",
        "toplarge": "toplarge",
        "topmedium": "topmedium",
        "topsmall": "topsmall",
        "toptiny": "toptiny",
        "topxLarge": "topxLarge",
        "topxTiny": "topxTiny",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "alignItems": "center",
      "children": <div
        className="placeholder"
      />,
      "className": "",
      "display": "flex",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "className": "placeholder",
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "InnerComponent": [Function],
      "displayName": "JssContextSubscriber(Flexbox)",
      "propTypes": Object {
        "alignContent": [Function],
        "alignItems": [Function],
        "alignSelf": [Function],
        "children": [Function],
        "className": [Function],
        "direction": [Function],
        "display": [Function],
        "flex": [Function],
        "id": [Function],
        "justifyContent": [Function],
        "order": [Function],
        "style": [Function],
        "wrap": [Function],
      },
      "render": [Function],
      Symbol(Symbol.hasInstance): [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "alignItems": "center",
        "children": <div
          className="placeholder"
        />,
        "className": "",
        "display": "flex",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "placeholder",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "InnerComponent": [Function],
        "displayName": "JssContextSubscriber(Flexbox)",
        "propTypes": Object {
          "alignContent": [Function],
          "alignItems": [Function],
          "alignSelf": [Function],
          "children": [Function],
          "className": [Function],
          "direction": [Function],
          "display": [Function],
          "flex": [Function],
          "id": [Function],
          "justifyContent": [Function],
          "order": [Function],
          "style": [Function],
          "wrap": [Function],
        },
        "render": [Function],
        Symbol(Symbol.hasInstance): [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`Placeholder styles matches the snapshot 1`] = `
Object {
  "@keyframes placeholderPulse": Object {
    "0%": Object {
      "opacity": 0.5,
    },
    "100%": Object {
      "opacity": 0.5,
    },
    "50%": Object {
      "opacity": 1,
    },
  },
  "bottombase": Object {
    "marginBottom": 24,
  },
  "bottomlarge": Object {
    "marginBottom": 48,
  },
  "bottommedium": Object {
    "marginBottom": 32,
  },
  "bottomsmall": Object {
    "marginBottom": 16,
  },
  "bottomtiny": Object {
    "marginBottom": 8,
  },
  "bottomxLarge": Object {
    "marginBottom": 64,
  },
  "bottomxTiny": Object {
    "marginBottom": 4,
  },
  "heading": Object {
    "& $placeholder": Object {
      "height": 22,
    },
    "height": 32,
  },
  "headline": Object {
    "& $placeholder": Object {
      "height": 36,
    },
    "height": 48,
  },
  "hero": Object {
    "& $placeholder": Object {
      "height": 57,
    },
    "height": 72,
  },
  "large": Object {
    "& $placeholder": Object {
      "height": 16,
    },
    "height": 24,
  },
  "micro": Object {
    "& $placeholder": Object {
      "height": 10,
    },
    "height": 16,
  },
  "placeholder": Object {
    "animation": "placeholderPulse 1s infinite ease-in-out",
    "background": "#f5f5f5",
    "borderRadius": 4,
    "height": [Function],
    "width": [Function],
  },
  "round": Object {
    "borderRadius": "50%",
  },
  "small": Object {
    "& $placeholder": Object {
      "height": 12,
    },
    "height": 16,
  },
  "standard": Object {
    "& $placeholder": Object {
      "height": 14,
    },
    "height": 24,
  },
  "subheading": Object {
    "& $placeholder": Object {
      "height": 16,
    },
    "height": 24,
  },
  "topbase": Object {
    "marginTop": 24,
  },
  "toplarge": Object {
    "marginTop": 48,
  },
  "topmedium": Object {
    "marginTop": 32,
  },
  "topsmall": Object {
    "marginTop": 16,
  },
  "toptiny": Object {
    "marginTop": 8,
  },
  "topxLarge": Object {
    "marginTop": 64,
  },
  "topxTiny": Object {
    "marginTop": 4,
  },
}
`;

exports[`PlaceholderJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UNDEFINED />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": [Function],
    },
    "ref": null,
    "rendered": [Function],
    "type": Object {
      "$$typeof": Symbol(react.context),
      "_calculateChangedBits": null,
      "_context": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": Object {
          "$$typeof": Symbol(react.provider),
          "_context": [Circular],
        },
        "_calculateChangedBits": null,
        "_currentRenderer": null,
        "_currentRenderer2": null,
        "_currentValue": Object {
          "classNamePrefix": "",
          "disableStylesGeneration": false,
        },
        "_currentValue2": Object {
          "classNamePrefix": "",
          "disableStylesGeneration": false,
        },
        "_threadCount": 0,
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": [Function],
      },
      "ref": null,
      "rendered": [Function],
      "type": Object {
        "$$typeof": Symbol(react.context),
        "_calculateChangedBits": null,
        "_context": Object {
          "$$typeof": Symbol(react.context),
          "Consumer": [Circular],
          "Provider": Object {
            "$$typeof": Symbol(react.provider),
            "_context": [Circular],
          },
          "_calculateChangedBits": null,
          "_currentRenderer": null,
          "_currentRenderer2": null,
          "_currentValue": Object {
            "classNamePrefix": "",
            "disableStylesGeneration": false,
          },
          "_currentValue2": Object {
            "classNamePrefix": "",
            "disableStylesGeneration": false,
          },
          "_threadCount": 0,
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;
